[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/img/fixed/stork_body.png" type="Texture" id=1]
[ext_resource path="res://assets/img/fixed/stork_wing_left.png" type="Texture" id=2]
[ext_resource path="res://assets/img/fixed/stork_wing_right.png" type="Texture" id=3]
[ext_resource path="res://Stork.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/sfx/error.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 120.0

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("StorkArt/WingL:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.1 ), Vector2( 1, 1 ), Vector2( 1, -1 ), Vector2( 1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StorkArt/WingR:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.1 ), Vector2( 1, 1 ), Vector2( 1, -1 ), Vector2( 1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:applied_force")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -60 ), Vector2( -110, -120 ), Vector2( 120, -140 ), Vector2( -100, -100 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "soar"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("StorkArt/WingL:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.1 ), Vector2( 1, 0.3 ), Vector2( 1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StorkArt/WingR:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.2, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.1 ), Vector2( 1, 0.3 ), Vector2( 1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:applied_force")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -100 ), Vector2( -4, -100 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "wrong"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("StorkArt:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.988235, 0.0196078, 0.0196078, 1 ), Color( 1, 1, 1, 1 ), Color( 0.988235, 0.0196078, 0.0196078, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Stork" type="RigidBody2D"]
position = Vector2( 0, 0.5 )
input_pickable = true
linear_velocity = Vector2( -100, 4 )
applied_force = Vector2( -1, -60 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="StorkArt" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Payload" type="Sprite" parent="StorkArt"]
scale = Vector2( 0.6, 0.6 )
offset = Vector2( 30, 140 )

[node name="Body" type="Sprite" parent="StorkArt"]
position = Vector2( -1, 10 )
texture = ExtResource( 1 )

[node name="WingR" type="Sprite" parent="StorkArt"]
scale = Vector2( 1, 0.1 )
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( 20, -60 )

[node name="WingL" type="Sprite" parent="StorkArt"]
position = Vector2( 27.2352, 7.62939e-06 )
scale = Vector2( 1, 0.1 )
z_index = 3
texture = ExtResource( 2 )
offset = Vector2( 20, -60 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "fly"
anims/fly = SubResource( 2 )
anims/soar = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wrong = SubResource( 4 )

[node name="AudioError" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="input_event" from="." to="." method="_on_Stork_input_event"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
